querys fixed on mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(5, 1fr);
 }
 body>*{
     background-color:#ffffff;
@@ -39,17 +39,18 @@ header, #parrafoDeHeader{
 font-size: medium;
 }
 article>h3{
-    padding: 1rem 0rem 0rem 1rem;
+    padding: 1rem 0rem 0.5rem 1rem;
+    font-size: x-large;
 }
 article>p{
-    padding: 0rem 0rem 0rem 1rem;
+    padding: 0rem 0rem 1rem 1rem;
     font-weight: 200;
-    font-size: medium;
+    font-size: 16;
 }
 article>img{
-    width: 2.5rem;
+    width: 3rem;
     position: relative;
-    left: 75%;
+    left: 80%;
 }
 .supervisor{
     border-top:solid hsl(180, 62%, 55%);
@@ -72,41 +73,42 @@ article>img{
     grid-row: span 1;
 }
 @media screen and (min-width:1440px) {
-    /*14 columns x 7 rows*/
+    /*14 columns x 8 rows*/
     body{
         grid-template-columns: repeat(14, 1fr);
-        grid-template-rows:repeat(7, auto) ;
+        grid-template-rows:repeat(8, 1fr) ;
     }
     body>*{
-        margin: 1rem;
+        margin: 0.5rem;
     }
+
     .header{
         align-content: center;
-        grid-column: 5/11;
+        grid-column: 5/10;
         grid-row: 1/5;
-        margin: 3rem 0rem 4rem 0rem;
+        margin: 4rem 0rem 1rem 0rem;
     }
     header, #parrafoDeHeader{
-        font-size: 16;
-        padding: 0rem 2.5rem;
+        font-size: small;
+        padding: 0rem 3.5rem 0rem;
         
         }
     .supervisor{
-        grid-column: 2/6  ;
+        grid-column: 3/6  ;
         grid-row:  4/6;
     }
     
     .team-builder{
-        grid-column: 6/10 ;
+        grid-column: 6/9 ;
         grid-row: 3/5 ;
     }
     .karma{
-        grid-column: 6/10 ;
+        grid-column: 6/9 ;
         grid-row: 5/7 ;
     }
 
     .calculator{
-        grid-column: 10/14 ;
+        grid-column: 9/12 ;
         grid-row: 4/6 ;
     }
 
